<resources>
    <string name="app_name">New Me</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="news">News</string>
    <string name="user_image">User Image</string>
    <string name="title_activity_news_editor">NewsEditor</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="news_image">News Image</string>
    <string name="title_activity_news_details">NewsDetails</string>
    <string name="write_comment">write comment</string>
    <string name="title_activity_authentication">Authentication</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="management">Management</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="guest">Anonymous</string>
    <string name="contact_us">Contact us</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="write_a_message">Write a Message</string>
    <string name="title_activity_faqeditor">FAQEditor</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="signup">SignUp</string>
    <string name="phone_number">phone number</string>
    <string name="location">location</string>
    <string name="confirm_password">confirm password</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="username_already_exists">UserName Already exists</string>
    <string name="faq">FAQ</string>
    <string name="new_me">New me</string>
    <string name="about_us">About us</string>
    <string name="home">Home</string>
    <string name="action">Action</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="choose_action">Choose Action</string>
    <string name="full_name">full name</string>
    <string name="title_activity_image_view_full_screen">ImageViewFullScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
