<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@id/nav_news"
            android:icon="@drawable/news_icon"
            android:title="@string/news" />
        <item
            android:id="@id/nav_FAQََ"
            android:icon="@drawable/faq_icon"
            android:title="@string/faq" />
        <item
            android:id="@id/nav_contact_us"
            android:icon="@drawable/contact_us_icon"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nar_231322"
            android:icon="@drawable/newme_icon"
            android:title="@string/new_me" />

        <item
            android:id="@+id/nar_23122"
            android:icon="@drawable/about_icon"
            android:title="@string/about_us" />
        <item
            android:id="@id/nav_login"
            android:icon="@drawable/login_icon"
            android:checkable="false"
            android:title="@string/login" />

    </group>

 <!--<item android:title="">-->
        <!--<menu>-->
           <!---->
        <!--</menu>-->
    <!--</item>-->
</menu>
