<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kareem.newme.News.NewsEditorFragment"
    tools:showIn="@layout/activity_news_editor">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin"
        >
        <ImageView
            android:id="@+id/news_edit_imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/news_image"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/textFields_default_margin"
            android:src="@mipmap/click_here"
            />
        <EditText
            android:id="@+id/news_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginTop="@dimen/textFields_default_margin"
            android:hint="@string/title"/>
        <EditText
            android:id="@+id/news_content_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/content"
            android:layout_marginTop="@dimen/textFields_default_margin"
            />
    </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_edit" />

</android.support.design.widget.CoordinatorLayout>
