    <!-- TODO: Update blank fragment layout -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.kareem.newme.Authentication.RegisterFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center"
        android:paddingLeft="@dimen/logo_default_padding"
        android:paddingRight="@dimen/logo_default_padding"
        android:src="@drawable/new_me_logo"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f00"
            android:text="@string/username_already_exists"
            android:id="@+id/error_text_already_exists"
            android:visibility="gone"
            />
        <EditText
            android:id="@+id/userName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:drawableStart="@drawable/user_name"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/secondaryTextColor"
            android:textColorHint="@color/secondaryTextColor"
            android:textSize="16sp"
            />


        <EditText
            android:id="@+id/fullName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:drawableStart="@drawable/user"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/name_hint"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/secondaryTextColor"
            android:textColorHint="@color/secondaryTextColor"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/userEmailId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:drawableStart="@drawable/email"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/secondaryTextColor"
            android:textColorHint="@color/secondaryTextColor"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="horizontal">
        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:drawableStart="@drawable/phone"
            android:gravity="center_vertical"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:singleLine="true"
            android:textColor="@color/secondaryTextColor"
            android:textColorHint="@color/secondaryTextColor"
            app:ccp_defaultNameCode="US"
            app:ccp_contentColor="@color/secondaryTextColor"
            />
            <EditText
            android:id="@+id/mobileNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/secondaryTextColor"
            android:textColorHint="@color/secondaryTextColor"
            android:textSize="16sp" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <!--<EditText-->
            <!--android:id="@+id/location"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:background="@color/colorPrimaryDark"-->
            <!--android:drawableStart="@drawable/location"-->
            <!--android:drawablePadding="8dp"-->
            <!--android:gravity="center_vertical"-->
            <!--android:hint="@string/location"-->
            <!--android:inputType="textCapWords"-->
            <!--android:padding="10dp"-->
            <!--android:singleLine="true"-->
            <!--android:textColor="@color/white"-->
            <!--android:textColorHint="@color/white"-->
            <!--android:textSize="16sp" />-->

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:drawableStart="@drawable/password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/secondaryTextColor"
            android:textColorHint="@color/secondaryTextColor"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:drawableStart="@drawable/confirm_password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/secondaryTextColor"
            android:textColorHint="@color/secondaryTextColor"
            android:textSize="16sp" />

        <!--<CheckBox-->
            <!--android:id="@+id/terms_conditions"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="7dp"-->
            <!--android:text="@string/terms_and_conditions"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="14sp" />-->

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/signup"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>